test-data/unit/check-obvious.test
-- Tests for obvious return types

[case testObviousLiteralString]
# flags: --obvious-return
def foo():
    return ""

def bar():
    return 1

reveal_type(foo() + "")  # E: Revealed type is 'builtins.str'
bar() + foo()  # E: Unsupported operand types for + ("int" and "str")
